# genomediff-python

./: .gitignore  README.rst  pyproject.toml  setup.py  tests.py
.github/workflows/: codespell.yml  pypi_to_anaconda.yml  pytest.yml  upload_to_pypi.yml
genomediff/: __init__.py  parser.py  records.py
src/genomediff/: __init__.py  parser.py  records.py
tests/: test_genomediff.py
